8325546: [lworld] Missing barrier in C1 compiled code on AArch64